[package]
name = "euler-107"
version = "0.1.0"
edition = "2021"
authors = ["firelight.flagboy <firelight.flagboy@gmail.com>"]
description = "simplify network route"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.16"
